球出界重置并计分

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
 	<header>
 		<h1>PingPong</h1>
+		<div id="scoreboard">
+			<div class="score">Player A:<span id="scoreA">0</span></div>
+			<div class="score">Player B:<span id="scoreB">0</span></div>
+		</div>
 	</header>
 	<div id="game">
 		<div id="playground">
